<resources>
    <string name="null_string" />
    <string name="camera_label">Camera</string>
    <string name="camcorder_label">Camcorder</string>
    <string name="general_label">General</string>
    <string name="wait">Please wait...</string>
    <string name="warning_msg">Warning</string>
    <string name="insert_mmc_msg">Insert memory card to use Camera</string>
    <string name="not_enough_space">Not enough memory</string>
    <string name="change_to_card_memory">Not enough memory. Default storage is changed to memory card</string>
    <string name="change_to_phone_memory">Not enough memory. Default storage is changed to phone memory</string>
    <string name="change_to_device_memory">Not enough memory. Default storage is changed to device memory</string>
    <string name="dual_video_reach_size_limit">Dual camera recording stopped</string>
    <string name="video_reach_size_limit">Maximum recording size reached</string>
    <string name="processing_msg">Processing...</string>
    <string name="panorama_processing_msg">Please wait while creating panorama</string>
    <string name="battery_overheat">Exit Camera. Battery temperature too high</string>
    <string name="temperature_too_high_flash_off">Unable to turn on the flash. Try again when your device has cooled down.</string>
    <string name="temperature_too_high_recording_flash_off">The flash has been turned off. You can turn on the flash when your device has cooled down.</string>
    <string name="temperature_too_high_recording_disable">Recording has stopped. You can record when your device has cooled down.</string>
    <string name="temperature_too_high_dual_record">Unable to record in Dual camera mode. Try again when your device has cooled down.</string>
    <string name="savingImage">Saving...</string>
    <string name="open_hw_failed_msg">Camera failed</string>
    <string name="capture_failed_msg">Capture failed</string>
    <string name="recording_failed_msg">Recording failed</string>
    <string name="buffer_overflow_error_msg">Unable to record. Resolution not supported by memory card</string>
    <string name="media_server_died_msg">MediaServer failed. Camera needs restart</string>
    <string name="unknown_error_callback_msg">Unknown error by ErrorCallback</string>
    <string name="settings">Settings</string>
    <string name="low_batt_msg">Low battery</string>
    <string name="close">Close</string>
    <string name="disable">Disabled</string>
    <string name="cannot_start_camera_msg">Unable to start Camera during call</string>
    <string name="cannot_start_camcorder_msg">Unable to record videos during call</string>
    <string name="image_stitching_fail">Failed</string>
    <string name="MaxRecordingSizeMMS">295K</string>
    <string name="CS_PROGRESS_NUMBER">0/9</string>
    <string name="ZOOM_X_1">x1</string>
    <string name="ZOOM_X_3">x3</string>
    <string name="ZOOM_X_4">x4</string>
    <string name="SM_SINGLE">Single shot</string>
    <string name="SM_CONTINUOUS">Continuous shot</string>
    <string name="SM_MOSAIC">Mosaic shot</string>
    <string name="SM_PANORAMA">Panorama</string>
    <string name="SM_SMILE">Smile shot</string>
    <string name="SM_FRAME">Frame shot</string>
    <string name="SM_BEAUTY">Beauty face</string>
    <string name="SM_VINTAGE">Vintage</string>
    <string name="SM_ADDME">Add me</string>
    <string name="SM_ACTION">Action shot</string>
    <string name="SM_STOPMOTION">Stop motion</string>
    <string name="SM_CARTOON">Cartoon</string>
    <string name="SM_SHARE_MODE">Share shot</string>
    <string name="SM_HDR">HDR</string>
    <string name="SM_BURST">Burst shot</string>
    <string name="SM_BEST_PHOTO">Best photo</string>
    <string name="SM_BEST_FACE">Best face</string>
    <string name="SM_BUDDY_PHOTOSHARING">Buddy photo share</string>
    <string name="SM_MULTI_FRAME">MultiFrame shot</string>
    <string name="SM_NIGHT">Night</string>
    <string name="SM_ERASER">Eraser</string>
    <string name="SM_PET">Pet</string>
    <string name="SM_AUTO">Auto</string>
    <string name="SM_RICH_TONE">Rich tone (HDR)</string>
    <string name="SM_AUTO_PORTRAIT">Auto Portrait</string>
    <string name="SM_MANUAL">Manual</string>
    <string name="SM_GOLF">Golf</string>
    <string name="SM_DRAMA">Drama</string>
    <string name="SM_STORY">Sound &amp; shot</string>
    <string name="SM_COUPLE">Couple</string>
    <string name="SM_3DPANORAMA">360 photo</string>
    <string name="SM_CINEPIC">Animated photo</string>
    <string name="SM_AQUA">Aqua</string>
    <string name="MODE">MODE</string>
    <string name="SM_AUTO_description">Automatically adjusts the exposure to optimise the colour and brightness of pictures. You can take single or burst shots.</string>
    <string name="SM_AUTO_burst_off_description">Automatically adjusts the exposure to optimise the colour and brightness of pictures</string>
    <string name="SM_BEAUTY_description">Enhances facial features automatically when taking portrait pictures</string>
    <string name="SM_BEST_PHOTO_description">Take a series of pictures, and then select the best to save</string>
    <string name="SM_CONTINUOUS_description">Take pictures continuously at a rate of 4 per second</string>
    <string name="SM_BEST_FACE_description">Select the best picture of each person from 5 consecutive pictures to get the best merged group picture</string>
    <string name="SM_ERASER_description">Save the best picture after erasing moving objects from %d consecutive pictures</string>
    <string name="SM_DRAMA_description">Takes multiple exposure pictures of a moving subject and merges them into one dramatic picture</string>
    <string name="SM_PANORAMA_description">Take pictures in either a horizontal or vertical direction to create a linear panorama</string>
    <string name="SM_3DPANORAMA_description">Take 360° pictures to create a spherical panorama</string>
    <string name="SM_RICH_TONE_description">Enhances the realism of your pictures by capturing greater intensity and contrast of both colour and light</string>
    <string name="SM_STORY_description">Enriches pictures by adding a few seconds of background sound</string>
    <string name="SM_CINEPIC_description">Create a picture containing selected moving objects by animating certain parts of the picture</string>
    <string name="SM_NIGHT_description">Take brighter, clearer pictures in low light without the flash</string>
    <string name="SM_SPORTS_SCENE_description">Take pictures of fast moving objects</string>
    <string name="SM_AUTO_PORTRAIT_description">Take self-portrait with the rear camera. Voice guide provide to correct your photo after turn the device</string>
    <string name="SM_GOLF_description">Take pictures of a golf-swing. You can then play the pictures forwards and backwards</string>
    <string name="SM_PET_description">Take your pet with interesting sound. Camera automatically takes when they look at the camera</string>
    <string name="SM_AQUA_description">Appropriate for taking pictures underwater</string>
    <string name="NORMAL">Normal</string>
    <string name="VM_WARM">Warm</string>
    <string name="VM_COOL">Cool</string>
    <string name="VM_MONO">Mono</string>
    <string name="AUTO">Auto</string>
    <string name="WB_CLOUDY">Cloudy</string>
    <string name="WB_DAYLIGHT">Daylight</string>
    <string name="WB_FLUORESCENT">Fluorescent</string>
    <string name="WB_HORIZON">Horizon</string>
    <string name="WB_SHADE">Shade</string>
    <string name="WB_INCANDESCENT">Incandescent</string>
    <string name="ISO_50">50</string>
    <string name="ISO_100">100</string>
    <string name="ISO_200">200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_800">800</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_3200">3200</string>
    <string name="E_BW">Grey-scale</string>
    <string name="E_SEPIA">Sepia</string>
    <string name="E_NEGATIVE">Negative</string>
    <string name="E_EMBOSS">Emboss</string>
    <string name="E_OUTLINE">Outline</string>
    <string name="E_WATERCOLOR">Watercolour</string>
    <string name="E_MONOCHROME">Monochrome</string>
    <string name="E_SKETCH">Sketch</string>
    <string name="E_WASHED">Washed out</string>
    <string name="E_POSTERIZE">Posterise</string>
    <string name="E_SOLARIZE">Solarise</string>
    <string name="E_VINTAGE">Vintage</string>
    <string name="E_VINTAGE_COLD">Cold vintage</string>
    <string name="E_VINTAGE_WARM">Warm vintage</string>
    <string name="E_POINT_BLUE">Blue</string>
    <string name="E_POINT_GREEN">Green point</string>
    <string name="E_POINT_RED_YELLOW">Red/Yellow</string>
    <string name="E_NOSTALGIA">Nostalgia</string>
    <string name="E_FADED_COLOURS">Faded colour</string>
    <string name="E_RETRO">Retro</string>
    <string name="E_SUNSHINE">Sunshine</string>
    <string name="E_OLDPHOTO">OldPhoto</string>
    <string name="E_COMIC">Cartoon</string>
    <string name="E_PASTEL_SKETCH">Oil pastel</string>
    <string name="E_GOTHIC_NOIR">Moody</string>
    <string name="E_IMPRESSIONIST">Engraving</string>
    <string name="E_VIGNETTE_OUTFOCUS">Vignette</string>
    <string name="E_SANDSTONE">Rugged</string>
    <string name="E_RAINBOW">Tint</string>
    <string name="E_INSTAGRAM_NASHVILLE">Turquoise</string>
    <string name="E_FISHEYE">Fisheye</string>
    <string name="E_FOR_REAL">For real</string>
    <string name="E_STUCCHEVOLE">Stucchevole</string>
    <string name="E_NOIR_NOTE">Noir note</string>
    <string name="E_VINCENT">Vincent</string>
    <string name="EXT_DOWNLOAD">Download</string>
    <string name="EXT_DOWNLOADS">Downloads</string>
    <string name="EXT_PRELOAD">Preloads</string>
    <string name="EFFECT_CONSTRAINT_MESSAGE">The multi preview feature is not supported for downloaded effects. They will be shown in the sample images rather than in previews.</string>
    <string name="E_WINDOW">Window</string>
    <string name="E_CUBISM">Cubism</string>
    <string name="E_POLAROID">Instant pic</string>
    <string name="E_POSTCARD">Stamp</string>
    <string name="E_SIGNATURE">Signature</string>
    <string name="E_OVAL_BLUR">Oval blur</string>
    <string name="E_CIRCLELENS">Fisheye</string>
    <string name="E_SHINY">Shiny</string>
    <string name="E_HEART">Heart shape</string>
    <string name="E_EXPOSURE_OVERLAY">Exposure overlay</string>
    <string name="E_SPLIT_VIEW">Split</string>
    <string name="R_4128x3096">4128x3096 (4:3)</string>
    <string name="R_4128x2322">4128x2322 (16:9)</string>
    <string name="R_4096x3072">4096x3072 (4:3)</string>
    <string name="R_4096x2304">4096x2304 (16:9)</string>
    <string name="R_3264x2448">3264x2448 (4:3)</string>
    <string name="R_3264x1968">3264x1968</string>
    <string name="R_3264x1836">3264x1836 (16:9)</string>
    <string name="R_3072x2304">3072x2304</string>
    <string name="R_3072x1856">3072x1856</string>
    <string name="R_2592x1944">2592x1944</string>
    <string name="R_2560x1920">2560x1920 (4:3)</string>
    <string name="R_2560x1536">2560x1536</string>
    <string name="R_2560x1440">2560x1440 (16:9)</string>
    <string name="R_2048x1536">2048x1536 (4:3)</string>
    <string name="R_2048x1232">2048x1232</string>
    <string name="R_2048x1152">2048x1152 (16:9)</string>
    <string name="R_2048x1104">2048x1104</string>
    <string name="R_1920x1080">1920x1080 (16:9)</string>
    <string name="R_1440x1080">1440x1080 (4:3)</string>
    <string name="wifi_dialog_no">Cancel</string>
    <string name="wifi_dialog_easy_connect">Easily connect</string>
    <string name="wifi_dialog_manual">Wi-Fi Direct settings</string>
    <string name="aquashot_key_select_text">You will be unable to use the touch screen underwater. Use the volume key as the camera or record key. Selecting this option will change the volume key settings.</string>
    <string name="camera_key">The camera key</string>
    <string name="record_key">The record key</string>
</resources>